# cameron-personal-site

./: .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc  README.md  backend_spec.md  dev.sh  docker-compose.production.yml  docker-compose.yml  frontend_spec.md  index.html  integration_spec.md  main_spec.md  orchestrator.py  package-lock.json  package.json  playwright.config.ts  setup.sh  start_orchestrator.py  tsconfig.json
.github/workflows/: ci.yml  performance-monitoring.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  digital_greenhouse.db  force_github_sync.py  pyproject.toml  pytest.ini  requirements.txt  run_dev.py  test_structure.py
backend/alembic/: env.py
backend/app/: background_tasks.py  main.py  sample_data.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  analytics.py  garden.py  integrations.py  projects.py  skills.py  visitors.py  weather.py
backend/app/core/: cache.py  config.py  database.py  monitoring.py
backend/app/integrations/: .env.example  README.md  __init__.py  analytics_processor.py  api_schemas.py  base.py  cache_manager.py  github_service.py  growth_engine.py  integration_config.py  integration_test.py  mood_engine.py  privacy_manager.py  rate_limiter.py  social_service.py  spotify_service.py  task_scheduler.py  wakatime_service.py  weather_service.py  websocket_manager.py
backend/app/models/: __init__.py  base.py  projects.py  skills.py  visitors.py  weather.py
backend/app/schemas/: __init__.py  analytics.py  base.py  garden.py  projects.py  skills.py  visitors.py  weather.py
backend/app/services/: garden.py  performance_monitor.py  projects.py  query_optimizer.py  visitor_tracking.py  weather.py
backend/app/tasks/: __init__.py  celery_app.py  growth_tasks.py  maintenance_tasks.py  sync_tasks.py
backend/app/websockets/: __init__.py  garden_ws.py  manager.py
backend/scripts/: run_celery.py  run_dev.py
backend/sql/: init.sql
backend/tests/: conftest.py
backend/tests/api/: test_garden.py
backend/tests/integration/: test_websocket.py
docker/: backend.Dockerfile  frontend.Dockerfile
docker/nginx/: default.conf  gzip.conf  nginx.conf  security-headers.conf
docker/scripts/: entrypoint.sh  healthcheck.sh
e2e/: accessibility.spec.ts  garden-interaction.spec.ts  global-setup.ts  global-teardown.ts  performance.spec.ts  visual-regression.spec.ts
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.js  App.jsx  App.tsx  index.css  main.tsx
frontend/src/components/: CameraController.tsx  CyberpunkCity.tsx  Dashboard.js  Enhanced3DPlants.tsx  EnhancedLoadingScreen.tsx  EnhancedSkillConstellation.tsx  ErrorBoundary.tsx  FloatingInfoPanels.tsx  GardenCanvas.tsx  GardenOrganizer.tsx  GitHubActivityCalendar.tsx  Ground.tsx  LoadingScreen.tsx  NavigationOverlay.tsx  NotificationSystem.tsx  PerformanceMonitor.tsx  ProfessionalNavigation.tsx  ProjectModal.tsx  ProjectPlant.tsx  SettingsPanel.tsx  SkillConstellation.tsx  SkillConstellationModal.tsx  WeatherSystem.tsx  WelcomeLandingExperience.tsx  index.ts
frontend/src/components/optimization/: FrustumCulling.tsx  LODManager.tsx  PerformanceMonitor.tsx
frontend/src/components/shaders/: AtmosphereShader.tsx
frontend/src/hooks/: useGarden.js  usePerformanceMonitor.ts  useWebSocket.ts
frontend/src/providers/: AccessibilityProvider.tsx
frontend/src/services/: api.js  projectMetricsService.ts
frontend/src/stores/: gardenStore.ts
frontend/src/tests/: setup.ts
frontend/src/tests/components/: GardenCanvas.test.tsx  PerformanceMonitor.test.tsx
frontend/src/tests/utils/: testUtils.tsx
frontend/src/types/: index.ts
frontend/src/utils/: gardenConfig.js  mobileOptimization.ts  performance.ts  plantTypes.js  webVitals.ts
load-testing/: k6_tests.js  locust_tests.py
monitoring/: alertmanager.yml  prometheus.yml
monitoring/grafana/dashboards/: digital-greenhouse-overview.json  performance-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboard.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/rules/: digital-greenhouse-alerts.yml
scripts/: accessibility-audit.js  check-bundle-size.js  dev.sh  load-test-runner.sh  monitoring-setup.sh  setup.sh
src/: App.tsx  index.css  main.jsx
src/components/: AboutCameron.tsx  CyberpunkCity.tsx  CyberpunkPortfolio.tsx  NeonInfrastructure.tsx  StarryNightSky.tsx
